# FinDoc_Assist

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  dependencies.py  main.py  schemas.py
app/services/: __init__.py  chunking.py  embedding.py  guardrails.py  ingestion.py  llm.py  parsing.py  prompting.py  query.py  vector_store.py
app/static/: styles.css
app/templates/: index.html
tests/: test_chunking.py  test_guardrails.py  test_query_service.py
