[project]
name = "findoc-assist"
version = "0.1.1"
description = "Production-grade RAG document QA system with web UI and safety guardrails."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic-settings>=2.3.4",
  "pypdf>=4.2.0",
]

[project.optional-dependencies]
rag = [
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0.post1",
]

[project.scripts]
findoc-assist = "app.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
